@@ -49,8 +49,8 @@ public class SessionHandlingTestHandler extends AbstractPustefixRequestHandler {
         int count = 1;
         if(session != null) {
             Integer counter = (Integer)session.getAttribute("COUNTER");
-            if(counter == null) counter = new Integer(1);
-            else counter = new Integer(counter + 1);
+            if(counter == null) counter = Integer.valueOf(1);
+            else counter = Integer.valueOf(counter + 1);
             session.setAttribute("COUNTER", counter);
             count = counter;
         }
